k8s/fullApp/bottles-dep-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottles-dep-v1
  labels:
    app: bottles
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottles
      version: v1
  template:
    metadata:
      labels:
        app: bottles
        version: v1
    spec:
      containers:
      - name: bottles
        image: meshery20/bottle-producer:1.0.0
        ports:
        - containerPort: 3002
