k8s/fullApp/bottling-plant-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottling-plant
  labels:
    app: bottling-plant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bottling-plant
  template:
    metadata:
      labels:
        app: bottling-plant
    spec:
      containers:
      - name: bottling-plant
        image: meshery20/bottling-plant:v4
        ports:
        - containerPort: 3000
