k8s/fullApp/frontend-v2-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels:
    app: frontend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
      - name: frontend
        image: meshery20/frontend:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
