k8s/fullApp/bottles-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bottles
  labels:
    app: bottles
    service: bottles
spec:
  type: LoadBalancer
  ports:
  - port: 3002
    name: grpc
  selector:
    app: bottles
