k8s/fullApp/bottling-plant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bottling-plant
  labels:
    app: bottling-plant
    service: bottling-plant
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: bottling-plant
