k8s/fullApp/drinks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drinks
  labels:
    app: drinks
    service: drinks
spec:
  ports:
  - port: 3001
    name: grpc
  selector:
    app: drinks
