k8s/fullApp/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
      weight: 30
    - destination:
        host: frontend
        subset: v2
      weight: 30
    - destination:
        host: frontend
        subset: v3
      weight: 40
